--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,8 @@ spring:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true
+
+jamendo:
+  api:
+    url: ${JAMENDO_API_BASE_URL}
+    key: ${JAMENDO_CLIENT_ID}
