--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true
+  web:
+    resources:
+      add-mappings: false
 
 jwt:
   secret:
