✨ feat: feat: FileStorageService 파일명 규칙 및 업로드 정책 정리
- 파일명 sanitize 처리 로직 추가 (sanitizeBaseName)
- 파일 삭제 유틸 메서드(deleteFileByPath) 추가
- 파일 업로드/삭제 관련 에러코드 정리
- multipart 최대 업로드 크기(yml) 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true
+  servlet:
+    multipart:
+      max-file-size: 30MB
+      max-request-size: 30MB
 
 jwt:
   secret:
