✨ feat: 이메일 인증 기능 추가
이메일 인증코드를 발송하고 인증하는 기능을 추가함.
api 명세서 ErrorCode 매칭 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,29 @@
 spring:
   datasource:
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:mysql://localhost:3306/peach_music
+    username: root
+    password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: hosujjing@gmail.com
+    password: qwkvwqeacpibuiad
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+
+
 
 jwt:
   secret:
