--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,14 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    implementation 'at.favre.lib:bcrypt:0.10.2' // 비밀번호 인코딩 bcrypt 알고리즘
+    // 비밀번호 인코딩 bcrypt 알고리즘
+    implementation 'at.favre.lib:bcrypt:0.10.2'
 
+    // email 인증 gradle
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5'
+    implementation 'javax.mail:javax.mail-api:1.6.2'
+    implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     // jwt
     implementation "io.jsonwebtoken:jjwt-api:0.11.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-impl:0.11.5"
