♻ refactor: 패키지명 수정
1. 패키지명 자바 컨벤션에 맞춰서 수정
2. yml 파일의 MAIL_USERNAME으로 수정
3. common의 entity의 BaseEntity클래스를 model로 이동

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
   mail:
     host: ${MAIL_HOST}
     port: 587
-    username: ${MAIL_NAME}
+    username: ${MAIL_USERNAME}
     password: ${MAIL_PASSWORD}
     properties:
       mail.smtp.auth: true
