--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -9,8 +9,8 @@ spring:
 
   data:
     redis:
-      host: localhost
-      port: 6379
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
   jpa:
     show-sql: true
     hibernate:
