✨ feat: 음원 다운로드/형변환 재시도 기능 추가
- WebClient 사용해서 Worker 서버로 요청 보내는 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,11 @@ jamendo:
   api:
     url: ${JAMENDO_API_BASE_URL}
     key: ${JAMENDO_CLIENT_ID}
+
+peachmusic:
+  media:
+    audio-path: ${UPLOAD_PATH}
+    transcode-path: ${TRANSCODE_PATH}
+
+worker:
+  base-url: ${WORKER_URL}
