--- a/build.gradle
+++ b/build.gradle
@@ -46,15 +46,19 @@ dependencies {
     implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
-    // Redis 추가
+    // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    // RedisTemplate 자바 -> redis 명령어로 | redis 값을 -> 자바로
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310' // 파싱 도구 추가
+    // RedisTemplate
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     // jwt
     implementation "io.jsonwebtoken:jjwt-api:0.11.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-impl:0.11.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-jackson:0.11.5"
+
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-mail"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
 
     // QueryDSL
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
