--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation "com.squareup.okhttp3:mockwebserver:4.12.0"
 
+    implementation 'org.springframework.retry:spring-retry'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 
 tasks.named('test') {
