✨ feat: 모니터링 설정
- Actuator, Prometheus 의존성 추가
- application.yml에서 Actuator 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,3 +49,12 @@ peachmusic:
 
 worker:
   base-url: ${WORKER_URL}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics, prometheus
+  endpoint:
+    health:
+      show-details: always
