--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,6 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5'
     implementation 'javax.mail:javax.mail-api:1.6.2'
     implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -71,6 +70,10 @@ dependencies {
 
     implementation 'org.springframework.retry:spring-retry'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+    // 모니터링
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.named('test') {
