--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,10 @@ dependencies {
 
     implementation 'org.springframework.retry:spring-retry'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+    // storage
+    implementation platform('software.amazon.awssdk:bom:2.25.62')
+    implementation 'software.amazon.awssdk:s3'
 }
 
 tasks.named('test') {
