--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     // storage
     implementation platform('software.amazon.awssdk:bom:2.25.62')
     implementation 'software.amazon.awssdk:s3'
+    implementation "software.amazon.awssdk:auth"
 
     // 모니터링
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
