--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,6 +58,7 @@ r2:
     assets: ${R2_BUCKET_ASSETS}
     media: ${R2_BUCKET_MEDIA}
   public-base: ${ASSETS_PUBLIC_BASE}
+  public-streaming-base: ${STREAMING_BASE}
 
 management:
   endpoints:
